--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-lines-ellipsis": "^0.14.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.4.1",
-    "react-scroll": "^1.7.16"
+    "react-scroll": "^1.7.16",
+    "validator": "^13.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
